--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
     "compilerOptions": {
       "outDir": "lib",
       "target": "es6",
-      // "module": "commonjs",
+      "module": "CommonJS",
+      "moduleResolution": "node",
       "strict": true,
+      "declarationMap": true,
+      "declaration": true
       // "allowJs": true,
       // "strictNullChecks": false,
-      "esModuleInterop": true,
+      // "esModuleInterop": true,
       // "experimentalDecorators": true,
       // "skipLibCheck": true,
       // "forceConsistentCasingInFileNames": true
